Added keyboard access

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <!-- google fonts -->
 
+    <link rel="icon" href="./img/favicon.png" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Orbitron&display=swap"
       rel="stylesheet"
@@ -35,7 +37,7 @@
   <body>
     <header>
       <div class="jumbotron">
-        <h1>Calacultor</h1>
+        <h1>Calaculator</h1>
         <h4>
           By Rishi Singh
         </h4>
@@ -146,6 +148,25 @@
           </div>
         </div>
       </div>
+      <br />
+      <div class="row" id="shortcuts">
+        <div class="col-11 p-3 ml-auto mr-auto blocks">
+          <h3 class="ml-3">Keyboard Shortcuts</h3>
+          <br />
+          <ul>
+            <li>O : "(" Opening Bracket</li>
+            <li>C : ")" Cloding Bracket</li>
+            <li>A : "+" Addition</li>
+            <li>S : "-" Substraction</li>
+            <li>M : "*" Multiplication</li>
+            <li>D : "/" Division</li>
+            <li>Backspace</li>
+            <li>Esc</li>
+            <li>Enter</li>
+            <li>Number Keys</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <footer class="footer">
       <div class="container foot">
@@ -162,11 +183,11 @@
                 href="https://github.com/rishi-singh26"
                 ><i class="fa fa-github fa-lg"></i
               ></a>
-              <a
+              <!-- <a
                 class="btn btn-social-icon"
                 href="mailto:rishi.singh24@yahoo.in"
                 ><i class="fa fa-envelope-o fa-lg"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
         </div>
